# mangadl

./: .gitignore  README.md  pyproject.toml  setup.py
mangadl/: batoto.py  core.py  mangacow.py  mangadex.py  trashscanlations.py  util.py  webtoons.py
