[tool.poetry]
name = "mangadl"
version = "0.0.1"
description = "Multi-site manga downloader"
authors = ["Tom Hunt <tom@tomhunt.email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
trio = "^0.19.0"
asks = "^2.4.12"
beautifulsoup4 = "^4.10.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
